--- a/style.css
+++ b/style.css
@@ -1,45 +1,103 @@
-.banner{
-    background-image:url(Images/lebron.jpg);
-    height: 185px;
-    position: relative;
-    background-position: 0cap;
+.menubar{
+    display:flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    border: 2px solid black;
+    padding: 10px;
+    background-color: purple;
 }
-
-.box1{
-    border: 1px;
-    border-color: aqua;
-    border-style:hidden;
-    max-width: max-content;
-    float: right;
-    display: inline-block;
+.prodname{
+    color: yellow;
+}
+.prodname,.menulinks{
+    padding: .5 vw;
+}
+.menulinks a{
+    text-decoration: none;
+    font-family:'Courier New', Courier, monospace;
+    font-size:medium;
+    border: 1px solid black;
+    background-color:white;
+    transition:0.4s;
+    opacity:1;
+   margin: 1px;
+   font-weight:700;
+}
+.menulinks a:hover{
+    text-decoration: none;
+    font-family:'Courier New', Courier, monospace;
+    font-size:medium;
+    border: 1px solid black;
+    background-color:yellow;
+    transition:0.4s;
+    opacity:1;
+   margin: 1px;
+   font-weight:700;
 
 }
-
-.box2{
-    border: 1px;
-    border-color: aqua;
-    border-style:hidden;
-    max-width: max-content;
-    float: left;
-    display: inline-block;
-
-}
-
 .body{
-    position: relative;
-    display: block;
-    block-size: auto;
-    width: 1000px;
-    border: 1px;
-    border-color: black;
-    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    background-color: black;
+    max-width: 100vw; 
+    height: 45vw;
+    background-position: center;
+    background-size: cover;
+}
+.leftlinks{
+    display: inline-block;
+
+}
+.leftlinks a{
+    text-decoration: none;
+    font-family:'Courier New', Courier, monospace;
+    font-size:medium;
+    border: 1px solid black;
+    background-color:maroon;
+    transition:0.4s;
+    opacity:1;
+   margin: 1px;
+   font-weight:700;
+   color: goldenrod;
+   padding: 3px;
+}
+.leftlinks a:hover{
+    text-decoration: none;
+    font-family:'Courier New', Courier, monospace;
+    font-size:medium;
+    border: 1px solid black;
+    background-color:goldenrod;
+    color: maroon;
+    transition:0.4s;
+    opacity:1;
+   margin: 1px;
+   font-weight:700;
+
+}
+.bodytext{
+    display: inline-block;
+}
+.bodytext h1{
+    color:maroon;
+    font-size: xx-large;
+    text-align: justify;
+}
+.bodytext p{
+    color:goldenrod;
+    font-size: medium;
+    text-align: justify;
+
+}
+.bronbron{
+    color: maroon;
     font-size: large;
-    left: 45vh;
 }
-
-#Imgs1{
- justify-content: center;
- position:absolute;
- left: 60vh;
+.prodpic{
+    display: inline-block;
+    text-align: center;
+    width: 25vw;
+    height: 25vh;
 }
-
+.righttext{
+    color: goldenrod;
+}
