--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    margin: 0px;
+}
 .menubar{
     display:flex;
     align-items: flex-start;
@@ -22,6 +25,7 @@
     opacity:1;
    margin: 1px;
    font-weight:700;
+   padding: 1px;
 }
 .menulinks a:hover{
     text-decoration: none;
@@ -40,7 +44,7 @@
     justify-content: space-around;
     background-color: black;
     max-width: 100vw; 
-    height: 45vw;
+    height: 46vw;
     background-position: center;
     background-size: cover;
 }
